--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "karma": "4.0.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "karma-remap-istanbul": "^0.6.0",
     "protractor": "~5.4.2",
     "ts-node": "8.0.2",
